# lore

./: .gitignore  .lore.json  Makefile  lore.json.example  pyproject.toml
lore/: .lore.json  error_codes.py  resolve_cache_dir.py  resolve_platform_cache_dir.py
lore/claude/: .lore.json  check_bash_cmdmeta.py  collect_facts_for_tool_event.py  dispatch_hook_event.py  filter_facts_by_display_rate.py  filter_facts_by_hook_tag.py  load_display_rate_state.py  log_hook_event.py  match_facts_for_path.py  save_display_rate_state.py
lore/cli/: manage_facts.py
lore/client/: clamp_socket_path.py  ensure_lore_server.py  is_lore_server_running.py  resolve_lore_socket_path.py  send_fact_request.py  try_send_fact_request.py
lore/cmdmeta/: build_cmdmeta_instruction.py  cmdmeta.py  extract_cmdmeta_block.py  flag_vocabulary.py  parse_cmdmeta_block.py  resolve_cmdmeta_for_command.py  validate_cmdmeta.py
lore/errors/: create_error.py
lore/facts/: build_dict_from_fact.py  build_fact_from_dict.py  build_fact_render_context.py  build_matcher_set_from_strings.py  build_matcher_string.py  build_strings_from_matcher_set.py  compile_fact_matchers.py  create_fact.py  delete_fact.py  edit_fact.py  evaluate_fact_for_path.py  fact.py  find_matching_facts.py  generate_fact_id.py  globalize_fact_matchers.py  locate_fact_by_id.py  locate_facts_by_id.py  match_facts_for_path.py  matcher_set.py  parse_matcher_string.py  read_fact.py  render_fact_text.py  (+1 more)
scripts/: find_missing_tests  vulture_whitelist.py
tests/: .lore.json  test_resolve_cache_dir.py  test_resolve_platform_cache_dir.py
(+200 files in other folders)
