[project]
name = "lore"
version = "0.3.0"
description = "Glob pattern matcher with relocation support"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.14"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25", "pyyaml>=6.0", "ruff>=0.8.0", "vulture>=2.0", "skylos>=0.1.0"]

[project.scripts]
lore-hook-claude = "lore.claude.cli.handle_claude_hook:handle_claude_hook"
lore = "lore.cli.manage_facts:manage_facts"
lore-mcp = "lore.mcp.cli.serve_mcp:serve_mcp"
lore-server = "lore.server.cli.serve_lore:serve_lore"

[tool.hatch.build.targets.wheel]
packages = ["lore"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
